--- a/GuiApplication/imgui.ini
+++ b/GuiApplication/imgui.ini
@@ -4,14 +4,14 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=916,0
-Size=1004,1017
+Pos=642,0
+Size=638,720
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Hello, world!]
 Pos=0,0
-Size=914,1017
+Size=640,720
 Collapsed=0
 DockId=0x00000002,0
 
@@ -28,7 +28,7 @@ Collapsed=0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,0
-Size=1920,1017
+Size=1280,720
 Collapsed=0
 
 [Window][Example: Simple layout]
@@ -52,11 +52,11 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=-1920,23 Size=1920,1017 Split=X Selected=0xE87781F4
-  DockNode      ID=0x00000005 Parent=0x8B93E3BD SizeRef=914,720 Split=X
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=87,121 Size=1280,720 Split=X Selected=0xE87781F4
+  DockNode      ID=0x00000005 Parent=0x8B93E3BD SizeRef=640,720 Split=X
     DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=848,782 Split=X
       DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=398,720 Selected=0xDE6E0C33
       DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=448,720 CentralNode=1 Selected=0xD00C9CD4
     DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=430,782 Selected=0xE7652686
-  DockNode      ID=0x00000006 Parent=0x8B93E3BD SizeRef=1004,720 HiddenTabBar=1 Selected=0xE87781F4
+  DockNode      ID=0x00000006 Parent=0x8B93E3BD SizeRef=638,720 Selected=0xE87781F4
 
